--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=DynaPuff&display=swap");
 /*CSS Reset*/
 * {
@@ -13,16 +12,23 @@ button {
 html {
   scroll-behavior: smooth;
 }
+
+body {
+  overflow-x: hidden; 
+}
+
 /*CSS Variables*/
 :root {
   --navbar-height: 59px;
 }
+
 /*Navigation Bar*/
 #navbar {
   display: flex;
   align-items: center;
   position: sticky;
   top: 0px;
+  z-index: 10;
 }
 #navbar::before {
   content: "";
@@ -35,6 +41,7 @@ html {
   z-index: -1;
   opacity: 0.4;
 }
+
 /*Navigation Bar: Logo and Image*/
 #logo {
   margin: 6px 30px;
@@ -43,6 +50,7 @@ html {
   height: 60px;
   margin: 3px 6px;
 }
+
 /*Navigation Bar: List Styling*/
 #navbar ul {
   display: flex;
@@ -50,7 +58,7 @@ html {
 }
 #navbar ul li {
   list-style: none;
-  font-size: 1.3 rem;
+  font-size: 1.3rem;
 }
 #navbar ul li a {
   color: white;
@@ -80,9 +88,10 @@ html {
 
 /*Home Section*/
 #home {
+  position: relative;
   display: flex;
   flex-direction: column;
-  height: 550px;
+  min-height: 550px;
   padding: 3px 200px;
   justify-content: center;
   align-items: center;
@@ -90,11 +99,8 @@ html {
 #home::before {
   content: "";
   position: absolute;
-  top: 0px;
-  left: 0px;
+  inset: 0;
   background: url("bg.jpg") no-repeat center center/cover;
-  height: 642px;
-  width: 100%;
   z-index: -1;
   opacity: 0.89;
 }
@@ -109,6 +115,7 @@ html {
   font-size: 1rem;
   font-family: "Bree Serif", serif;
 }
+
 /*Services Section*/
 #services {
   margin: 8px;
@@ -135,8 +142,8 @@ html {
 
 /*Client Section*/
 #client-section {
-  height: 400px;
-  margin-top: 0px;
+  position: relative;
+  padding: 40px 0;
 }
 #clients {
   display: flex;
@@ -145,30 +152,28 @@ html {
 }
 .client-item {
   padding: 34px;
-  position: relative;
 }
 #client-section::before {
   content: "";
   position: absolute;
+  inset: 0;
   background: url("bg6.avif") no-repeat center center/cover;
-  height: 43%;
-  width: 100%;
   z-index: -1;
   opacity: 0.4;
 }
 #clients img {
   height: 124px;
 }
+
 /*Contact Section*/
 #contact {
   position: relative;
-  margin-top: -117px;
+  padding-top: 40px;
 }
 #contact::before {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 538px;
+  inset: 0;
   z-index: -1;
   opacity: 0.7;
   background: url("contact.jpg3.jpg") no-repeat center center/cover;
